<resources>

    <string name="app_name">eCalendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">日历</string>
    <string name="previous">左</string>
    <string name="next">右</string>
    <string name="today">今日</string>
	<string name="text_lucky">日程</string>
	<string name="text_more">更多</string>
</resources>