<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_pre_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hello_world"
            tools:context=".Main" />

        <Button
            android:id="@+id/btn_next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_calendar_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <GridView
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/layout_calendar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_xingzhuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/text_lucky" />

        <Button
            android:id="@+id/btn_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:text="@string/today" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/text_more" />
    </RelativeLayout>

</RelativeLayout>